public class user{
    String name;
}